Issue #6 Fixed iframe getting cut off on the right side.

--- a/src/components/TabView/tabview.css
+++ b/src/components/TabView/tabview.css
@@ -50,4 +50,5 @@
     height: 100vh;
     max-width: 100%;
     width: 100%;
+    padding-right: 4px;
 }
